fix(core): npmpackage only contains dist folder

--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
   "main": "dist/index.js",
   "module": "dist/index.es.js",
   "jsnext:main": "dist/index.es.js",
+  "files": [
+    "dist"
+  ],
   "engines": {
     "node": ">=8",
     "npm": ">=5"
