--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "predeploy": "cd example && yarn install && yarn run build",
     "deploy": "gh-pages -d example/build --message \"[skip ci] Updates\"",
     "release": "standard-version",
-    "prettier": "prettier --write 'src/**/*.js' 'example/**/*.css' 'example/**/*.html' 'example/src/**/*.js'"
+    "prettier": "prettier --write 'src/**/*.js' 'example/**/*.css' 'example/**/*.html' 'example/src/**/*.js'",
+    "docs:build": "documentation build src/** -f html -o dist_docs"
   },
   "peerDependencies": {
     "react": "^16.8.6",
@@ -64,6 +65,7 @@
     "@commitlint/config-conventional": "^8.2.0",
     "babel-eslint": "^10.0.1",
     "cross-env": "^5.2.0",
+    "documentation": "^12.1.2",
     "eslint": "6.1.0",
     "eslint-config-standard": "^11.0.0",
     "eslint-config-standard-react": "^6.0.0",
