--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "eslint-plugin-standard": "^3.1.0",
     "gh-pages": "^2.0.1",
     "husky": "^3.0.9",
+    "prettier": "^2.0.2",
     "react": "^16.8.6",
     "react-dom": "16.8.6",
     "react-scripts": "^3.0.1",
