--- a/package.json
+++ b/package.json
@@ -62,8 +62,8 @@
     "@babel/plugin-syntax-import-meta": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
-    "@commitlint/cli": "^8.2.0",
-    "@commitlint/config-conventional": "^8.2.0",
+    "@commitlint/cli": "8.3.3",
+    "@commitlint/config-conventional": "8.3.3",
     "babel-eslint": "^10.0.1",
     "cross-env": "^5.2.0",
     "documentation": "^12.1.2",
