--- a/manifest.json
+++ b/manifest.json
@@ -3,6 +3,6 @@
   "name": "react-context-hook",
   "start_url": "./index.html",
   "display": "standalone",
-  "theme_color": "#000000",
+  "theme_color": "#09d3ac",
   "background_color": "#ffffff"
 }
