chore: react to 17 and all other packages possible

--- a/package.json
+++ b/package.json
@@ -39,8 +39,8 @@
     "docs:buildmd": "documentation build src/** -f md -o DOCS.md"
   },
   "peerDependencies": {
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
@@ -63,32 +63,30 @@
     "@babel/plugin-syntax-import-meta": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
-    "@commitlint/cli": "8.3.3",
-    "@commitlint/config-conventional": "8.3.3",
-    "babel-eslint": "^10.0.1",
-    "cross-env": "^5.2.0",
-    "documentation": "^12.1.2",
-    "eslint": "6.1.0",
-    "eslint-config-standard": "^11.0.0",
-    "eslint-config-standard-react": "^6.0.0",
-    "eslint-plugin-import": "^2.13.0",
-    "eslint-plugin-node": "^7.0.1",
+    "@commitlint/cli": "^12.0.1",
+    "@commitlint/config-conventional": "^12.0.1",
+    "@rollup/plugin-babel": "^5.3.0",
+    "@rollup/plugin-commonjs": "^17.1.0",
+    "@rollup/plugin-node-resolve": "^11.2.0",
+    "@rollup/plugin-url": "^6.0.0",
+    "cross-env": "^7.0.3",
+    "documentation": "^13.1.1",
+    "eslint": "7.20.0",
+    "eslint-config-standard-react": "^11.0.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.0.0",
     "eslint-plugin-react": "^7.10.0",
-    "eslint-plugin-standard": "^3.1.0",
     "gh-pages": "^2.0.1",
     "husky": "^3.0.9",
     "prettier": "^2.0.2",
-    "react": "^16.8.6",
-    "react-dom": "16.8.6",
-    "react-scripts": "^3.0.1",
-    "rollup": "^1.1.2",
-    "rollup-plugin-babel": "^4.3.2",
-    "rollup-plugin-commonjs": "^9.2.0",
-    "rollup-plugin-node-resolve": "^4.0.0",
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0",
+    "react-scripts": "^4.0.3",
+    "rollup": "^2.39.0",
     "rollup-plugin-peer-deps-external": "^2.2.0",
-    "rollup-plugin-url": "^2.1.0",
-    "standard-version": "^8.0.1"
+    "standard-version": "^9.1.1",
+    "typescript": "^4.2.2"
   },
   "config": {
     "commitizen": {
