--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,7 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Try to build
         run: |
-          yarn test,
-          yarn build,
-          yarn prepare,
+          yarn test
+          yarn build
+          yarn prepare
           yarn predeploy
