build: remove all ts definition files before declaration build

--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "prettier": "prettier --write 'src/**/*.js' 'example/**/*.css' 'example/**/*.html' 'example/src/**/*.js'",
     "docs:build": "documentation build src/** -f html -o docs",
     "docs:buildmd": "documentation build src/** -f md -o DOCS.md",
-    "declaration:build": "rm -f dist/index.d.ts && tsc -p declaration.tsconfig.json"
+    "declaration:build": "rm -f dist/*.d.ts && tsc -p declaration.tsconfig.json"
   },
   "peerDependencies": {
     "react": "^17.0.0",
