--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "cross-env": "^7.0.3",
     "documentation": "^13.1.1",
     "eslint": "7.20.0",
+    "eslint-config-standard": "^16.0.3",
     "eslint-config-standard-react": "^11.0.1",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
